mem_dbg/tests/snapshots/test_all_types_mem_dbg_insta__humanize_depth_2@aarch64-darwin.snap
---
source: mem_dbg/tests/test_all_types_mem_dbg_insta.rs
expression: depth_output
---
64.14 kB 100.00% ⏺: test_all_types_mem_dbg_insta::all_types_helper::AllTypesStruct
    0  B   0.00% ├╴unit: ()
    1  B   0.00% ├╴boolean: bool
    4  B   0.01% ├╴character: char
    4  B   0.01% ├╴f32_val: f32
    8  B   0.01% ├╴f64_val: f64
    1  B   0.00% ├╴u8_val: u8
    2  B   0.00% ├╴u16_val: u16
    4  B   0.01% ├╴u32_val: u32
    8  B   0.01% ├╴u64_val: u64
   16  B   0.02% ├╴u128_val: u128
    8  B   0.01% ├╴usize_val: usize
    1  B   0.00% ├╴i8_val: i8
    2  B   0.00% ├╴i16_val: i16
    4  B   0.01% ├╴i32_val: i32
    8  B   0.01% ├╴i64_val: i64
   16  B   0.02% ├╴i128_val: i128
    8  B   0.01% ├╴isize_val: isize
    1  B   0.00% ├╴atomic_bool: core::sync::atomic::AtomicBool
    1  B   0.00% ├╴atomic_i8: core::sync::atomic::AtomicI8
    2  B   0.00% ├╴atomic_i16: core::sync::atomic::AtomicI16
    4  B   0.01% ├╴atomic_i32: core::sync::atomic::AtomicI32
    8  B   0.01% ├╴atomic_i64: core::sync::atomic::AtomicI64
    8  B   0.01% ├╴atomic_isize: core::sync::atomic::AtomicIsize
    1  B   0.00% ├╴atomic_u8: core::sync::atomic::AtomicU8
    2  B   0.00% ├╴atomic_u16: core::sync::atomic::AtomicU16
    4  B   0.01% ├╴atomic_u32: core::sync::atomic::AtomicU32
    8  B   0.01% ├╴atomic_u64: core::sync::atomic::AtomicU64
    8  B   0.01% ├╴atomic_usize: core::sync::atomic::AtomicUsize
    1  B   0.00% ├╴nz_i8: core::num::nonzero::NonZero<i8>
    2  B   0.00% ├╴nz_i16: core::num::nonzero::NonZero<i16>
    4  B   0.01% ├╴nz_i32: core::num::nonzero::NonZero<i32>
    8  B   0.01% ├╴nz_i64: core::num::nonzero::NonZero<i64>
   16  B   0.02% ├╴nz_i128: core::num::nonzero::NonZero<i128>
    8  B   0.01% ├╴nz_isize: core::num::nonzero::NonZero<isize>
    1  B   0.00% ├╴nz_u8: core::num::nonzero::NonZero<u8>
    2  B   0.00% ├╴nz_u16: core::num::nonzero::NonZero<u16>
    4  B   0.01% ├╴nz_u32: core::num::nonzero::NonZero<u32>
    8  B   0.01% ├╴nz_u64: core::num::nonzero::NonZero<u64>
   16  B   0.02% ├╴nz_u128: core::num::nonzero::NonZero<u128>
    8  B   0.01% ├╴nz_usize: core::num::nonzero::NonZero<usize>
    0  B   0.00% ├╴phantom_pinned: core::marker::PhantomPinned
    0  B   0.00% ├╴phantom_data: core::marker::PhantomData<i32>
   29  B   0.05% ├╴string: alloc::string::String
   16  B   0.02% ├╴reference: &str
    8  B   0.01% ├╴mut_reference: &mut i32
    8  B   0.01% ├╴opt_some: core::option::Option<i32>
    4  B   0.01% │ ╰╴Some: i32
   24  B   0.04% ├╴opt_none: core::option::Option<alloc::string::String>
   16  B   0.02% ├╴boxed: alloc::boxed::Box<u64>
   44  B   0.07% ├╴vec: alloc::vec::Vec<i32>
   76  B   0.12% ├╴vec_str: alloc::vec::Vec<alloc::string::String>
   10  B   0.02% ├╴array: [u8; 10]
   52  B   0.08% ├╴array_str: [alloc::string::String; 2]
   28  B   0.04% ├╴slice: alloc::boxed::Box<[u32]>
   42  B   0.07% ├╴slice_str: alloc::boxed::Box<[alloc::string::String]>
   38  B   0.06% ├╴tuple2: (i32, alloc::string::String)
    4  B   0.01% │ ├╴0: i32 [4B]
   30  B   0.05% │ ╰╴1: alloc::string::String
   43  B   0.07% ├╴tuple3: (i32, alloc::string::String, f64)
    4  B   0.01% │ ├╴0: i32 [4B]
   27  B   0.04% │ ├╴1: alloc::string::String
    8  B   0.01% │ ╰╴2: f64
   43  B   0.07% ├╴tuple4: (i32, alloc::string::String, f64, bool)
    4  B   0.01% │ ├╴0: i32
   27  B   0.04% │ ├╴1: alloc::string::String
    8  B   0.01% │ ├╴2: f64
    1  B   0.00% │ ╰╴3: bool [3B]
   43  B   0.07% ├╴tuple5: (i32, alloc::string::String, f64, bool, u8)
    4  B   0.01% │ ├╴0: i32
   27  B   0.04% │ ├╴1: alloc::string::String
    8  B   0.01% │ ├╴2: f64
    1  B   0.00% │ ├╴3: bool
    1  B   0.00% │ ╰╴4: u8 [2B]
   16  B   0.02% ├╴range: core::ops::range::Range<usize>
    8  B   0.01% │ ├╴start: usize
    8  B   0.01% │ ╰╴end: usize
    8  B   0.01% ├╴range_from: core::ops::range::RangeFrom<usize>
    8  B   0.01% │ ╰╴start: usize
   24  B   0.04% ├╴range_inclusive: core::ops::range::RangeInclusive<usize>
    8  B   0.01% │ ├╴start: usize
    8  B   0.01% │ ╰╴end: usize
    8  B   0.01% ├╴range_to: core::ops::range::RangeTo<usize>
    8  B   0.01% │ ╰╴end: usize
    8  B   0.01% ├╴range_to_inclusive: core::ops::range::RangeToInclusive<usize>
    8  B   0.01% │ ╰╴end: usize
    4  B   0.01% ├╴cell: core::cell::Cell<i32>
   16  B   0.02% ├╴ref_cell: core::cell::RefCell<i32>
    4  B   0.01% ├╴unsafe_cell: core::cell::UnsafeCell<i32>
   35  B   0.05% ├╴once_cell: core::cell::once::OnceCell<alloc::string::String>
   16  B   0.02% ├╴mutex: std::sync::poison::mutex::Mutex<i32>
   46  B   0.07% ├╴rw_lock: std::sync::poison::rwlock::RwLock<alloc::string::String>
   76  B   0.12% ├╴hash_set: std::collections::hash::set::HashSet<i32>
  157  B   0.24% ├╴hash_set_str: std::collections::hash::set::HashSet<alloc::string::String>
  192  B   0.30% ├╴hash_map: std::collections::hash::map::HashMap<alloc::string::String, i32>
   92  B   0.14% ├╴hash_map_copy: std::collections::hash::map::HashMap<i32, i32>
   84  B   0.13% ├╴btree_set: alloc::collections::btree::set::BTreeSet<i32>
  305  B   0.48% ├╴btree_set_str: alloc::collections::btree::set::BTreeSet<alloc::string::String>
  352  B   0.55% ├╴btree_map: alloc::collections::btree::map::BTreeMap<alloc::string::String, i32>
  128  B   0.20% ├╴btree_map_copy: alloc::collections::btree::map::BTreeMap<i32, i32>
   36  B   0.06% ├╴vec_deque: alloc::collections::vec_deque::VecDeque<u32>
   32  B   0.05% ├╴binary_heap: alloc::collections::binary_heap::BinaryHeap<u32>
   72  B   0.11% ├╴linked_list: alloc::collections::linked_list::LinkedList<u32>
    0  B   0.00% ├╴build_hasher: core::hash::BuildHasherDefault<std::hash::random::DefaultHasher> [10B]
   16  B   0.02% ├╴random_state: std::hash::random::RandomState
   33  B   0.05% ├╴path_buf: std::path::PathBuf
   16  B   0.02% ├╴path: &std::path::Path
   33  B   0.05% ├╴os_string: std::ffi::os_str::OsString
   16  B   0.02% ├╴os_str: &std::ffi::os_str::OsStr
    8  B   0.01% ├╴fn_ptr0: fn() -> i32
    8  B   0.01% ├╴fn_ptr1: fn(i32) -> i32
    8  B   0.01% ├╴fn_ptr2: fn(i32, i32) -> i32
    8  B   0.01% ├╴fn_ptr3: fn(u32, u64, i32) -> bool
    8  B   0.01% ├╴fn_ptr4: fn(u32, u64, i32, f64) -> bool
   16  B   0.02% ├╴layout: core::alloc::layout::Layout
    8  B   0.01% ├╴non_null: core::ptr::non_null::NonNull<i32>
8.264 kB  12.88% ├╴buf_reader: std::io::buffered::bufreader::BufReader<core::io::cursor::Cursor<alloc::vec::Vec<u8>>>
8.256 kB  12.87% ├╴buf_writer: std::io::buffered::bufwriter::BufWriter<core::io::cursor::Cursor<alloc::vec::Vec<u8>>>
   36  B   0.06% ├╴cursor: core::io::cursor::Cursor<alloc::vec::Vec<u8>>
    8  B   0.01% ├╴arc: alloc::sync::Arc<i32>
    8  B   0.01% ├╴rc: alloc::rc::Rc<i32>
   92  B   0.14% ├╴vec_deque_nested: alloc::collections::vec_deque::VecDeque<alloc::vec::Vec<i32>>
   84  B   0.13% ├╴binary_heap_nested: alloc::collections::binary_heap::BinaryHeap<alloc::vec::Vec<i32>>
  116  B   0.18% ├╴linked_list_nested: alloc::collections::linked_list::LinkedList<alloc::vec::Vec<i32>>
   16  B   0.02% ├╴mutex_guard: std::sync::poison::mutex::MutexGuard<i32>
   16  B   0.02% ├╴rw_lock_read_guard: std::sync::poison::rwlock::RwLockReadGuard<alloc::string::String>
   16  B   0.02% ├╴rw_lock_write_guard: std::sync::poison::rwlock::RwLockWriteGuard<alloc::string::String>
   48  B   0.07% ├╴hash_set_empty: std::collections::hash::set::HashSet<i32>
  696  B   1.09% ├╴hash_set_100: std::collections::hash::set::HashSet<i32>
   48  B   0.07% ├╴hash_map_empty: std::collections::hash::map::HashMap<i32, i32>
1.208 kB   1.88% ├╴hash_map_cc_100: std::collections::hash::map::HashMap<i32, i32>
4.470 kB   6.97% ├╴hash_map_cn_100: std::collections::hash::map::HashMap<i32, alloc::string::String>
4.470 kB   6.97% ├╴hash_map_nc_100: std::collections::hash::map::HashMap<alloc::string::String, i32>
6.708 kB  10.46% ├╴hash_map_nn_100: std::collections::hash::map::HashMap<alloc::string::String, alloc::string::String>
   24  B   0.04% ├╴btree_set_empty: alloc::collections::btree::set::BTreeSet<i32>
1.404 kB   2.19% ├╴btree_set_100: alloc::collections::btree::set::BTreeSet<i32>
   24  B   0.04% ├╴btree_map_empty: alloc::collections::btree::map::BTreeMap<i32, i32>
2.184 kB   3.40% ├╴btree_map_cc_100: alloc::collections::btree::map::BTreeMap<i32, i32>
6.406 kB   9.99% ├╴btree_map_cn_100: alloc::collections::btree::map::BTreeMap<i32, alloc::string::String>
6.346 kB   9.89% ├╴btree_map_nc_100: alloc::collections::btree::map::BTreeMap<alloc::string::String, i32>
10.48 kB  16.34% ├╴btree_map_nn_100: alloc::collections::btree::map::BTreeMap<alloc::string::String, alloc::string::String>
   72  B   0.11% ╰╴default_hasher: std::hash::random::DefaultHasher
